--- a/advanced-woo-search/assets/css/common.css
+++ b/advanced-woo-search/assets/css/common.css
@@ -108,6 +108,7 @@
     z-index: 2;
     -webkit-appearance: none;
     height: 100%;
+    min-height: inherit;
     margin: 0 !important;
     border: 1px solid #d8d8d8;
     outline: 0;
@@ -391,7 +392,8 @@
 }
 
 .aws-search-result .aws_result_cat .aws_result_title,
-.aws-search-result .aws_result_tag .aws_result_title {
+.aws-search-result .aws_result_tag .aws_result_title,
+.aws-search-result .aws_result_top_custom_item .aws_result_title {
     margin-bottom: 2px;
 }
 
