--- a/advanced-woo-search/assets/css/admin.css
+++ b/advanced-woo-search/assets/css/admin.css
@@ -1,3 +1,7 @@
+.wrap h1 {
+    padding: 0;
+}
+
 .sortable-container {
     width: 200px;
     padding: 0;
@@ -49,16 +53,6 @@
     height: 36px;
     padding: 0;
     border: 1px dotted #ccc;
-}
-
-.nav-tab.premium-tab,
-.nav-tab[href*="page=aws-options&tab=premium"]{
-    background: #FFF7C7;
-}
-
-.nav-tab.premium-tab:hover,
-.nav-tab[href*="page=aws-options&tab=premium"]:hover {
-    background: #fff;
 }
 
 .wp-submenu .current a[href*="page=aws-options&tab=premium"] span,
@@ -114,12 +108,39 @@
 }
 
 #aws_form .aws-heading {
-    margin-right: -40px;
+    margin-right: -100px;
 }
 
-#aws_form select {
+#aws_form select,
+#aws_form textarea,
+#aws_form input[type="text"],
+#aws_form input[type="number"] {
     min-width: 170px;
     display: block;
+    width: 100%;
+    max-width: 500px;
+}
+
+#aws_form input[type="number"] {
+    max-width: 200px;
+}
+
+#aws_form .aws-input-checkbox,
+#aws_form .aws-input-radio {
+    margin-bottom: 5px;
+}
+
+.form-table .description {
+    margin-top: 6px;
+    display: block;
+    color: #646970;
+}
+
+.form-table .description.activation {
+    font-size: 14px;
+    line-height: 1.7;
+    font-style: normal;
+    color: #3c434a;
 }
 
 /* Image select option */
@@ -134,8 +155,8 @@
     display: block;
     position: relative;
     vertical-align: top;
-    height: 36px;
-    width: 400px;
+    height: 40px;
+    width: 370px;
     margin: 0 0 16px;
 }
 
@@ -168,6 +189,9 @@
     border-color: rgba(0,0,0,0.6);
 }
 
+#aws_form .img-select .option input:disabled + .ico {
+    opacity: 0.5;
+}
 
 /* Premium tab */
 #aws_form .b-compare .column {
@@ -191,6 +215,14 @@
     padding-top: 2px;
 }
 
+#aws_form .aws-disabled td label,
+#aws_form .aws-disabled td .description {
+    color: rgba(44, 51, 56, 0.5);
+}
+
+#aws_form [data-tab="suggestions"] .submit {
+    display: none;
+}
 
 h1.aws-instance-name {
     position: relative;
@@ -211,12 +243,129 @@ h1.aws-instance-name {
     top: -4px;
 }
 
+/* Help tips */
+.aws-help-tip {
+    color: #666;
+    font-size: 1.2em;
+    font-style: normal;
+    line-height: 1;
+    vertical-align: middle;
+    margin: 0;
+}
+
+.aws-help-tip::after {
+    font-family: Dashicons;
+    speak: none;
+    font-weight: 400;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    text-indent: 0px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    content: "";
+    cursor: help;
+    font-variant: normal;
+    margin: 0px;
+}
+
+#tiptip_holder {
+    display: none;
+    z-index: 8675309;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#tiptip_holder.tip_bottom {
+    padding-top: 5px;
+}
+
+#tiptip_arrow,
+#tiptip_arrow_inner {
+    position: absolute;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 6px;
+    height: 0;
+    width: 0;
+}
+
+#tiptip_holder.tip_bottom #tiptip_arrow_inner {
+    margin-top: -5px;
+    margin-left: -6px;
+    border-bottom-color: #333;
+}
+
+#tiptip_content,
+.chart-tooltip,
+.wc_error_tip {
+    color: #fff;
+    font-size: .8em;
+    background: #333;
+    text-align: center;
+    border-radius: 3px;
+    padding: .618em 1em;
+    box-shadow: 0 1px 3px rgba(0,0,0,.2);
+}
+#tiptip_content a {
+    color: #fff;
+    pointer-events: auto;
+}
+
+/* Custom checkbox */
+.aws-toggle-label .aws-toggler {
+    background-color: #bbb;
+    border: none;
+    border-radius: 34px;
+    box-shadow: none;
+    margin: 0;
+    min-width: 30px;
+    position: relative;
+    transition: background .2s ease;
+    width: 30px;
+    color: #50575e;
+    clear: none;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 0;
+    margin: -0.25rem 0.25rem 0 0;
+    outline: 0;
+    padding: 0 !important;
+    text-align: center;
+    vertical-align: middle;
+    height: 16px;
+}
+
+.aws-toggle-label .aws-toggler:before {
+    background-color: #fff !important;
+    border-radius: 50%;
+    bottom: 2px;
+    content: "" !important;
+    height: 12px !important;
+    left: 2px;
+    position: absolute;
+    transition: transform .1s ease;
+    width: 12px !important;
+    z-index: 99;
+}
+
+.aws-toggle-label .aws-toggler:checked {
+    background-color: #007cba;
+}
+
+.aws-toggle-label .aws-toggler:checked:before {
+    transform: translateX(18px);
+    margin: -0.1875rem 0 0 -0.25rem;
+}
+
 /* Admin header */
 #aws-admin-header {
-    margin: 0 0 20px -20px;
+    margin: 0 0 0 -20px;
     padding: 0;
-    border-bottom: 1px solid #c3c4c7;
     background: #fff;
+    border-bottom: 1px solid #c3c4c7;
 }
 
 #aws-admin-header .inner {
@@ -234,13 +383,20 @@ h1.aws-instance-name {
 }
 
 #aws-admin-header .inner .logo img {
-    width: 32px;
+    width: 250px;
     margin-right: 6px;
     vertical-align: middle;
 }
 
+#aws-admin-header .inner .logo .separator {
+    opacity: 0.25;
+    padding-right: 8px;
+}
+
 #aws-admin-header .inner .logo .title {
     vertical-align: middle;
+    top: -2px;
+    position: relative;
 }
 
 #aws-admin-header .inner .logo .version {
@@ -267,7 +423,8 @@ h1.aws-instance-name {
     margin-left: 5px;
 }
 
-#aws-admin-header .inner .btns a:before {
+#aws-admin-header .inner .btns a:before,
+#aws-admin-header .inner .btns a:after{
     speak: none;
     font-weight: 400;
     font-variant: normal;
@@ -289,10 +446,98 @@ h1.aws-instance-name {
     content: "\f466";
 }
 
+#aws-admin-header .inner .btns a.button-docs:after,
+#aws-admin-header .inner .btns a.button-support:after {
+    content: "\f504";
+    font-size: 12px;
+    vertical-align: bottom;
+    margin-left: 2px;
+    margin-right: 0;
+}
+
+#aws-admin-header .inner .btns a.button-pro:before {
+    content: "\f155";
+}
+
+#aws-admin-header .inner .btns a.button-pro {
+    color: #50575e;
+    background: #FFF7C7;
+    border: 1px solid #50575e;
+}
+
+#aws-admin-header .inner .btns a.button-pro:hover {
+    background: #fae9a1;
+}
+
 @media screen and (max-width: 782px) {
     #aws-admin-header .inner .btns {
         display: none;
     }
+}
+
+#aws-admin-subheader {
+    padding: 0;
+    border-top: 1px solid #eee;
+    background: #fff;
+}
+
+#aws-admin-subheader .inner {
+    display: flex;
+    position: relative;
+    padding: 0 22px;
+    margin: 0 auto;
+    justify-content: space-between
+}
+
+#aws-admin-subheader .inner .title {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#aws-admin-subheader .inner .aws-tabs {
+    display: flex;
+}
+
+#aws-admin-subheader .inner .aws-tabs .aws-nav-tab {
+    margin-left: 0;
+    border: 0;
+    background: 0 0;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 10px 0;
+    margin-right: 24px;
+    text-decoration: none;
+    color: #505050;
+    margin-bottom: -1px;
+    border-bottom: 3px solid transparent;
+}
+
+#aws-admin-subheader .inner .aws-tabs .aws-nav-tab.aws-nav-tab-active,
+#aws-admin-subheader .inner .aws-tabs .aws-nav-tab.aws-nav-tab-active:hover {
+    border-color: #007cba;
+    color: #070707;
+}
+
+#aws-admin-subheader .inner .aws-tabs .aws-nav-tab:hover {
+    color: #007cba;
+    border-color: #ccc;
+}
+
+#aws-admin-subheader .inner .aws-tabs .aws-nav-tab:focus {
+    outline: 0;
+    box-shadow: none;
+}
+
+#aws-admin-subheader .inner .aws-tabs .aws-pro-badge {
+    color: #50575e;
+    background: #FFF7C7;
+    border-radius: 3px;
+    padding: 1px 4px;
+    font-size: 10px;
+    vertical-align: baseline;
+    margin-left: 2px;
+    border: 1px solid #50575e;
 }
 
 /* Table */
@@ -451,6 +696,10 @@ h1.aws-instance-name {
 
 .aws-table.aws-table-sources td.aws-name {
     font-weight: 400;
+}
+
+.aws-table.aws-table-sources td.aws-name.aws-disabled {
+    color: rgba(44, 51, 56, 0.5);
 }
 
 /* Premium tab */
